refixing parsing clues
